--- a/EpsilonWebApp.Client/EpsilonWebApp.Client.csproj
+++ b/EpsilonWebApp.Client/EpsilonWebApp.Client.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EpsilonWebApp.Shared\EpsilonWebApp.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
